# docs/swagger.json
@@ -291,19 +291,6 @@
         }
     },
     "definitions": {
-        "github_com_vladgrskkh_onerep-auth_internal_domain_auth.Gender": {
-            "type": "string",
-            "enum": [
-                "male",
-                "female",
-                "other"
-            ],
-            "x-enum-varnames": [
-                "GenderMale",
-                "GenderFemale",
-                "GenderOther"
-            ]
-        },
         "github_com_vladgrskkh_onerep-auth_internal_handler.ErrorDetail": {
             "type": "object",
             "properties": {
@@ -417,7 +404,7 @@
                     "type": "string"
                 },
                 "gender": {
-                    "$ref": "#/definitions/github_com_vladgrskkh_onerep-auth_internal_domain_auth.Gender"
+                    "type": "string"
                 },
                 "id": {
                     "type": "string"
